fix inherit font-weight and font-size are got too much weight

--- a/assets/_form.sass
+++ b/assets/_form.sass
@@ -1,9 +1,10 @@
-.ah-form
-	@extend .form-horizontal
-
+form
 	*
 		font-weight: inherit
 		font-size: inherit
+
+.ah-form
+	@extend .form-horizontal
 
 	.form-group
 		margin-left: 30px
